# SOAR-AI-V1

./: .gitignore  .replit
attached_assets/: Pasted--Applying-api-0017-remove-emailcampaign-target-leads-and-more-Traceback-most-recent-call-last--1756904315543_1756904315546.txt  Pasted--Applying-api-0018-emailcampaign-target-leads-Traceback-most-recent-call-last-File-home-ru-1756904647708_1756904647710.txt  Pasted--C-workspace-server-python-manage-py-runserver-0-0-0-0-8000-Using-SMTP-email-backend-for-actual-e-1757500904850_1757500904853.txt  Pasted--DOCTYPE-html-html-xmlns-http-www-w3-org-1999-xhtml-lang-en-head-meta-charse-1757498394647_1757498394648.txt  Pasted--DOCTYPE-html-html-xmlns-http-www-w3-org-1999-xhtml-lang-en-head-meta-charset-utf-1757497495973_1757497495973.txt  (+54 more)
client/: vite.config.ts
server/: debug_history.py  fix_database.py  pyproject.toml  requirements.txt
server/api/: email_template_service.py  models.py  serializers.py  test_email.py  urls.py  views.py
server/api/management/commands/: test_email.py
server/api/migrations/: 0025_add_corporate_code_to_company.py  0026_add_revenue_prediction_data_table.py  0027_userprofile.py  0028_add_role_menu_permissions.py  0029_emailtemplate.py  0030_add_email_template_to_campaign.py  0031_add_description_to_role_menu_permission.py  0032_add_contact_history_fields.py  0033_add_sla_requirements_to_contract.py  0034_add_payment_terms_days_to_contract.py  0035_add_performance_bonus_to_contract.py  0036_add_exclusivity_to_contract.py  0037_add_custom_clauses_to_contract.py
server/soar_backend/: settings.py
(+28 files in other folders)
