
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soar-backend"
version = "1.0.0"
dependencies = [
    "Django==4.2",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.0.0",
    "python-decouple==3.8",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl==3.1.2",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "dj-database-url==2.3.0",
    "gunicorn==21.2.0",
]
